# maki

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  justfile
.github/workflows/: rust.yml
maki-agent/: Cargo.toml
maki-agent/src/: agent.rs  anthropic.rs  auth.rs  client.rs  lib.rs  permissions.rs  skill.rs  tool.rs  types.rs
maki-agent/src/agent/: history.rs  run.rs  tool_dispatch.rs
maki-agent/src/mcp/: config.rs  error.rs  http.rs  mod.rs  stdio.rs
maki-agent/src/prompts/: claude.md  general.md  plan.md  system.md
maki-code-index/: Cargo.toml
maki-code-index/src/: c.rs  common.rs  cpp.rs  csharp.rs  go.rs  java.rs  lib.rs  php.rs  python.rs  rust.rs  swift.rs  tests.rs  typescript.rs
maki-config/: Cargo.toml
maki-config/src/: lib.rs
maki-docgen/src/: main.rs
maki-interpreter/: Cargo.toml
maki-interpreter/src/: convert.rs  lib.rs  runner.rs
maki-lua/src/: loader.rs
maki-lua/tests/: index_equivalence.rs  index_spec.rs  plugin_host.rs  treesitter_compat.rs
maki-providers/: Cargo.toml
maki-providers/src/: error.rs  lib.rs  model.rs  provider.rs  retry.rs  types.rs
maki-storage/: Cargo.toml
maki-storage/src/: auth.rs  lib.rs  log.rs  sessions.rs
maki-tool-macro/src/: lib.rs
maki-ui/: Cargo.toml
maki-ui/src/: app.rs  chat.rs  event_loop.rs  highlight.rs  image.rs  lib.rs  markdown.rs  mock.rs  selection.rs  splash.rs  terminal.rs  text_buffer.rs  theme.rs
plugins/index/: init.lua
scripts/providers/: ollama-anthropic  ollama-openai
site/: build.sh  index.html
site/docs/: config.toml
src/: main.rs  print.rs
(+112 files in other folders)
